# test-pip-package

./: LICENSE  README.md  pyproject.toml  setup.py
my_pip_package/: my_pip_package.py
