[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_pip_package"
version = "0.0.1"
authors = [
  { name="Marko Zaric", email="m-zaric@hotmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/marko-zaric/test-pip-package"
Issues = "https://github.com/marko-zaric/test-pip-package/issues"